# dichn.github.io

./: .buildinfo  README.md  TODO  career.html  db.html  diff.html  genindex.html  index.html  memfd_secret_di.c  note.html  objects.inv  p  prep.html  probleme.html  ref.html  requirements.txt  search.html  searchindex.js  setup.py  stap.html  tox.ini
.doctrees/: career.doctree  environment.pickle  index.doctree  note.doctree  ref.doctree  stap.doctree
.github/workflows/: ci.yml  docs.yml  main.yml
.old/: career.html  diff.html  note.html  prep.html  prep.rst  ref.html  stap.html  stap.rst
_sources/: career.rst.txt  db.rst.txt  diff.rst.txt  index.rst.txt  note.rst.txt  ref.rst.txt
_static/: alabaster.css
cpp/: elf_sample_0.c  gdb.exp  readelf.exp
docs/: conf.py  index.rst  note.rst  prep.rst  ref.rst
doctrees/: environment.pickle  index.doctree  ref.doctree
dot_product/: Makefile  kernels.cu
html/: genindex.html  ref.html  stap.html
html/_sources/: note.rst.txt  stap.rst.txt
linux/: kernel.exp
mini-gdb/: CMakeLists.txt  main.cpp
mini-gdb/include/: helper.hpp
mini-gdb/src/: helper.cpp
misc/: aws-clean  bash-sscg-tool  bash-tmpl  confirm.py  crescendo  module_must_be_sign.cxx  notes  openssl.cnf  quick-call  sqlalchemy_event.py  unset  unset.sh  webm2mp3
misc/ansible/: README  example1.yml  site.yml
misc/cpp/: readelf.exp
misc/dot_product/: kernels.cuh  main.cu  use_thrust.cu
misc/elf/: print_phdr.c
misc/linux/: awfulnotes.dichen  kernel.exp
misc/mini-gdb/: main.cpp
misc/stp/: my_app.c
scripts/: push-docs
stp/: live_fix.stp
(+8 files in other folders)
